# rep_check

./: .gitignore  README.md  pyproject.toml
app/: app.py
rep_check/configs/: train_rep_check_push_up.yaml  train_rep_check_squat.yaml
rep_check/models/: gcn.py  rep_check.py
rep_check/utils/: ckpt_manager.py  dataset.py  ema.py  graph.py  logger.py  lr_scheduler.py  normalizer.py  trainer.py  visualizer.py
scripts/: create_dataset.py  eval.py  resize_videos.py  train.py
