[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rep_check"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
dependencies = [
  "av",
  "zarr",
  "numpy",
  "opencv-python",
  "matplotlib",
  "torch",
  "torchvision",
  "mediapipe",
  "einops",
  "hydra-core",
  "omegaconf",
  "tqdm",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rep_check*"]
